syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kvstore.raft";
option java_outer_classname = "RaftProto";

package kvstore.raft;

service RaftService {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message RequestVoteRequest {
  int64 term = 1;
  string candidateId = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteResponse {
  int64 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesRequest {
  int64 term = 1;
  string leaderId = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int64 leaderCommit = 6;
}

message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
}

message LogEntry {
  int64 term = 1;
  string key = 2;
  string value = 3;
  int64 index = 4;
}